# globant_challenge

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
examples/: departments.csv  employees.csv  jobs.csv
src/db_migration_api/: crud.py  database.py  main.py  models.py  routes.py  schemas.py  utils.py
tests/: conftest.py  test_api.py
